--- a/index.html
+++ b/index.html
@@ -690,7 +690,7 @@ var text = canvas.append("text")
     .attr("y", 200)
     .text("Y")
     .style("font", "60px 'stellar'")
-    .style("fill", "black")
+    .style("fill", "black"); 
       repeat();
 
 
