--- a/index.html
+++ b/index.html
@@ -185,10 +185,23 @@ banner();
           document.getElementById('logout').style.display = 'block';
           document.getElementById('login').style.display = 'none';
           document.getElementById('Wtext').style.display = 'none';
+          
+          document.getElementById('status').style.visibility = 'hidden';
+          document.getElementById('next2').style.visibility = 'hidden';
+          document.getElementById('Ads').style.visibility = 'hidden';
+          document.getElementById('Vis').style.visibility = 'hidden';
+          document.getElementById('endB').style.visibility = 'hidden';
         } else {
           document.getElementById('logout').style.display = 'none';
           document.getElementById('login').style.display = 'block';
           document.getElementById('Wtext').style.display = 'block';
+          
+          document.getElementById('status').style.visibility = 'hidden';
+          document.getElementById('next2').style.visibility = 'hidden';
+          document.getElementById('Ads').style.visibility = 'hidden';
+          document.getElementById('Vis').style.visibility = 'hidden';
+          document.getElementById('endB').style.visibility = 'hidden';
+        } else {
         }
       }
 
