--- a/index.html
+++ b/index.html
@@ -187,6 +187,7 @@ banner();
           document.getElementById('Wtext').style.display = 'none';
           
           document.getElementById('status').style.visibility = 'hidden';
+          document.getElementById('next').style.visibility = 'hidden';
           document.getElementById('next2').style.visibility = 'hidden';
           document.getElementById('Ads').style.visibility = 'hidden';
           document.getElementById('Vis').style.visibility = 'hidden';
@@ -197,6 +198,7 @@ banner();
           document.getElementById('Wtext').style.display = 'block';
 
           document.getElementById('status').style.visibility = 'hidden';
+          document.getElementById('next').style.visibility = 'hidden';
           document.getElementById('next2').style.visibility = 'hidden';
           document.getElementById('Ads').style.visibility = 'hidden';
           document.getElementById('Vis').style.visibility = 'hidden';
