--- a/index.html
+++ b/index.html
@@ -244,6 +244,8 @@ banner();
     document.getElementById('Vis').style.visibility = 'hidden';
     document.getElementById('endB').style.visibility = 'hidden';
 
+    document.getElementById('next').style.visibility = 'visible';
+
       var yStart = 260; 
       var spacer = 50;
      // var fontSize = 30; 
