--- a/index.html
+++ b/index.html
@@ -342,6 +342,8 @@ console.log(response.hometown);
 
         document.getElementById('status').innerHTML = "<img class = img src='" + response.picture.data.url + "'>";
 
+        console.log(response.picture.dara.url); 
+
     var friendsInfo = response.friends;
     var friendsInfo2 = friendsInfo.summary;
     //console.log(friendsInfo2.total_count); 
