--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ console.log(response.hometown);
 
         document.getElementById('status').innerHTML = "<img class = img src='" + response.picture.data.url + "'>";
 
-        console.log(response.picture.dara.url); 
+        console.log(response.picture.data.url); 
 
     var friendsInfo = response.friends;
     var friendsInfo2 = friendsInfo.summary;
