--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ banner();
           document.getElementById('login').style.display = 'none';
           document.getElementById('Wtext').style.display = 'none';
           
-          document.getElementById('status').style.visibility = 'hidden';
+          document.getElementById('status').style.visibility = 'visible';
           document.getElementById('next').style.visibility = 'hidden';
           document.getElementById('next2').style.visibility = 'hidden';
           document.getElementById('Ads').style.visibility = 'hidden';
@@ -378,6 +378,7 @@ function page3(){
   document.getElementById('Ads').style.visibility = 'hidden';
   document.getElementById('Vis').style.visibility = 'hidden';
   document.getElementById('endB').style.visibility = 'hidden';
+  document.getElementById('status').style.visibility = 'hidden';
 
   document.getElementById('next2').style.visibility = 'visible';
 
