--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
       cursor: pointer;
       position:absolute;
       border-radius: 2px;
-      top: 930px; 
+      top: 700px;
+      left: 50px; 
 
 
     }
