--- a/index.html
+++ b/index.html
@@ -621,14 +621,14 @@ function generalVis(){
       canvas.append("text")
       .attr("x",30)
       .attr("y", yP + (fontS + spaceF)*2)
-      .text("23 AND ME: £48 MILLION A YEAR (a year) ") //$7437 every minute 
+      .text("23 AND ME: £48 MILLION (a year) ") //$7437 every minute 
       .style("font", "40px 'stellar'")
       .style("fill", "black");
 
       canvas.append("text")
       .attr("x",30)
       .attr("y", yP + (fontS + spaceF)*3)
-      .text("GOOGLE: £45 MILLION (A DAY) ") //$7437 every minute 
+      .text("GOOGLE: £45 MILLION --- (A DAY) ") //$7437 every minute 
       .style("font", "40px 'stellar'")
       .style("fill", "black");
 
