--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
       cursor: pointer;
       position:absolute;
       border-radius: 2px;
-      top: 500px; 
+      top: 350px; 
+      left: 50px;
 
     }
 
