--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@ banner();
         .attr("x", 50)
         .attr("y", 95)
         .text("WELCOME TO IDENTITY 2.0")
-        .style("font", "50px 'stellar'")
+        .style("font", "75px 'stellar'")
         .style("fill", "white");
 
     }// end of banner function 
@@ -425,7 +425,7 @@ var spaceT = 1;
         var text1 = canvas.append("text")
         .attr("x", 0)
         .attr("y", 10*spaceT)
-        .text("YOU'VE BEEN PROCESSED,YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED,YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED")
+        .text("YOU'VE BEEN PROCESSED,YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED,YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED, YOU'VE BEEN PROCESSED")
       .style("font", "10px 'stellar'")
       .style("fill", "black"); 
 
@@ -444,7 +444,7 @@ var spaceT = 1;
     canvas.append("rect")
       .attr("x", 70)
       .attr("y", 220)
-      .attr("width", 650)
+      .attr("width", 700)
       .attr("height", 500)
       .style("fill", "white")
       .style("stroke", "black");
@@ -453,7 +453,7 @@ var spaceT = 1;
     canvas.append("rect")
       .attr("x", 50)
       .attr("y", 240)
-      .attr("width", 650)
+      .attr("width", 700)
       .attr("height", 500)
       .style("fill", "black"); 
 
