--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ banner();
       var rect = canvas.append("rect")
         .attr("x", 0)
         .attr("y", 20)
-        .attr("width", width)
+        .attr("width", 2000)
         .attr("height", 100)
         .style("fill", "black");
 
@@ -556,7 +556,7 @@ document.documentElement.scrollTop = 0;
     var rect = canvas.append("rect")
         .attr("x", 0)
         .attr("y", 0)
-        .attr("width", width)
+        .attr("width", 2000)
         .attr("height", 1000)
         .style("fill", "black");
 
