--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ banner();
       var rect = canvas.append("rect")
         .attr("x", 0)
         .attr("y", 20)
-        .attr("width", width)
+        .attr("width", 3000)
         .attr("height", 100)
         .style("fill", "black");
 
