--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
       cursor: pointer;
       position:absolute;
       border-radius: 2px;
-      top:929px;
-      left:250px;
+      top:250px;
+      right: 10px;
     }
 
 
