--- a/index.html
+++ b/index.html
@@ -563,8 +563,8 @@ document.documentElement.scrollTop = 0;
     var text = canvas.append("text")
       .attr("x",50)
       .attr("y", 120)
-      .text("FACEBOOK MAKES £17,112")
-      .style("font", "80px 'stellar'")
+      .text("FACEBOOK HAS MADE £17,112")
+      .style("font", "70px 'stellar'")
       .style("fill", "white");
 
 
@@ -572,7 +572,7 @@ document.documentElement.scrollTop = 0;
       .attr("x",50)
       .attr("y", 240)
       .text("FROM DIGITAL AD'S")
-      .style("font", "80px 'stellar'")
+      .style("font", "70px 'stellar'")
       .style("fill", "white");
 
 
@@ -580,7 +580,7 @@ document.documentElement.scrollTop = 0;
       .attr("x",50)
       .attr("y", height - 130)
       .text("IN THE PAST 3 MINUTES")
-      .style("font", "100px 'stellar'")
+      .style("font", "90px 'stellar'")
       .style("opacity", 0)
       .transition()
       .delay(function(d,i){ return 700*i; }) //controls how many come on the screen
@@ -652,7 +652,7 @@ function generalVis(){
       canvas.append("text")
       .attr("x",30)
       .attr("y", yP + (fontS + spaceF)*3)
-      .text("GOOGLE: £45 MILLION --- (A DAY) ") //$7437 every minute 
+      .text("GOOGLE: £45 MILLION (A DAY) ") //$7437 every minute 
       .style("font", "40px 'stellar'")
       .style("fill", "black");
 
